@@ -1,4 +1,6 @@
 WARNING: bad7.pdf: file is damaged
 WARNING: bad7.pdf (offset 698): expected trailer dictionary
 WARNING: bad7.pdf: Attempting to reconstruct cross-reference table
+WARNING: bad7.pdf (object 2 0, offset 128): expected endobj
+WARNING: bad7.pdf (object 4 0, offset 389): expected endobj
 bad7.pdf: unable to find trailer dictionary while recovering damaged file
